--- a/index.html
+++ b/index.html
@@ -1,100 +1,31 @@
-<!DOCTYPE HTML>
-<!--
-	Lens by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
-	<head>
-		<title>OG15361 Portfolio</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload-0 is-preload-1 is-preload-2">
-
-		<!-- Main -->
-			<div id="main">
-
-				<!-- Header -->
-					<header id="header">
-						<h1>OG15361</h1>
-						<p>Welcome to a portfolio</p>
-					</header>
-
-				<!-- Thumbnail -->
-					<section id="thumbnails">
-						<article>
-							<a class="thumbnail" href="images/fulls/0001.png" data-position="left center"><img src="images/fulls/0001.png" alt="" /></a>
-							<h2>Phone</h2>
-							<p>A render of a concept phone I made.</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/fulls/blenderrender1.jpg"><img src="images/fulls/blenderrender1.jpg" alt="" /></a>
-							<h2>Stormtroopers</h2>
-							<p>A render of stormtroopers with a noise-including aesthetic.</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/fulls/bookhslefblue.png" data-position="top center"><img src="images/fulls/bookhslefblue.png"alt=""/></a>
-							<h2>A Bookshelf</h2>
-							<p>Just a bookshelf (thats blue).</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/fulls/coolradioactive0001.jpg"><img src="images/fulls/coolradioactive0001.jpg" alt="" /></a>
-							<h2>RADIOACTIVE!</h2>
-							<p>Some nuclear waste.</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/fulls/glasscup.png" data-position="top center"><img src="images/fulls/glasscup.png" alt="" /></a>
-							<h2>Glass</h2>
-							<p>One of my earlier attempts at rendering Glass in Cycles.</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/fulls/glasssuzane.jpg"><img src="images/fulls/glasssuzane.jpg" alt="" /></a>
-							<h2>Glass</h2>
-							<p>Another glass render, this time using "Suzzane" from Blender.</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/fulls/img2.png" data-position="bottom center"><img src="images/fulls/img2.png" alt="" /></a>
-							<h2>Donut w/ Coffee</h2>
-							<p>Made with the BLenderGuru tutorial.</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/fulls/ls5.png"><img src="images/fulls/ls5.png" alt="" /></a>
-							<h2>Lightsaber</h2>
-							<p>A pretty basic lightsaber.</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/fulls/orange juice.jpg" data-position="center"><img src="images/fulls/orange juice.jpg" alt="" /></a>
-							<h2>Orange Juice</h2>
-							<p>A cup of orange juice</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/fulls/particle_hair.png"><img src="images/fulls/particle_hair.png" alt="" /></a>
-							<h2>Particle Hair</h2>
-							<p>Using Blenders particle\\hair system to make Art.</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/fulls/particle_hair_stylised.png"><img src="images/fulls/particle_hair_stylised.png" alt="" /></a>
-							<h2>Particle Hair STYLISED</h2>
-							<p>Now in colour!</p>
-					</section>
-
-				<!-- Footer -->
-					<footer id="footer">
-						<ul class="copyright">
-							<li>&copy; OG15361.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a>.</li>
-						</ul>
-					</footer>
-
-			</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
+<!DOCTYPE html>
+<html lang="en">
+ <head>
+  <meta charset="utf-8">
+  <title>3D Design Work</title>
+  <link rel="stylesheet" href="styles.css">
+  <meta name="description" content="Portfolio">
+  <meta name="author" content="Ochinthya Gamage">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Agdasima&family=Playfair&family=Gabriela">
+  <style type="text/css">
+  </style>
+</head>
+<body>
+    <h1>Blender 3D Work</h1>
+<div id="gallery">
+  
+   <img src="images/image-001.png">
+   <img src="images/image-002.png">
+   <img src="images/image-003.png">
+   <img src="images/image-004.png">
+   <img src="images/image-005.png">
+   <img src="images/image-006.png">
+   <img src="images/image-007.png">
+   <img src="images/image-008.png">
+   <img src="images/image-009.png">
+   <img src="images/image-010.png">
+  
+  </div>
+ </body>
+ <footer>2023 Ochinthya Gamage - <a href="mailto:ochinthya.gamage@gmail.com">Contact</a></footer>
 </html>
